add custom css to bookreader template

--- a/app/views/layouts/imageviewer.html.erb
+++ b/app/views/layouts/imageviewer.html.erb
@@ -5,6 +5,7 @@
 
     <link rel="stylesheet" type="text/css" href="/stylesheets/bookreader/BookReader.css"/>
     <!-- Custom CSS overrides -->
+  <link rel="stylesheet" type="text/css" href="/stylesheets/bookreader/bookreader_custom.css"/>
     <link rel="stylesheet" type="text/css" href="/stylesheets/imageviewer/BookReaderImageViewer.css"/>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <%= javascript_include_tag "bookreader/jquery-ui-1.8.5.custom.min" %>
