top menu correct highlighting of active page

--- a/app/views/layouts/tdl-bootstrap.html.erb
+++ b/app/views/layouts/tdl-bootstrap.html.erb
@@ -81,22 +81,13 @@
       <!--   <a class="brand" href="./index.html">Tufts Digital Library</a> -->
       <div class="nav-collapse">
         <ul class="nav">
-          <li><%= link_to "Search", '/search' %></li>
-          <li><%= link_to "About", about_path() %></li>
-          <%- if "contact" == @current_action -%>
-                        <li class="active">
-                    <%- end -%>
-          <li><%= link_to "Contact", contact_path() %></li>
-          <%- if "contact" == @current_action -%>
-                        </li>
-                    <%- end -%>
-          <%- if "index" == @current_action -%>
-              <li class="active">
-          <%- end -%>
-          <li><%= link_to "Home", catalog_path('/') %></li>
-          <%- if "index" == @current_action -%>
-                        </li>
-                    <%- end -%>
+          <li <%- if "search" == @current_action -%> class ="active" <%- end -%>><%= link_to "Search", '/search' %></li>
+          <li <%- if "about" == @current_action -%> class ="active" <%- end -%>><%= link_to "About", about_path() %></li>
+          <li <%- if "contact" == @current_action -%> class ="active" <%- end -%>><%= link_to "Contact", contact_path() %></li>
+          <li <%- if "index" == @current_action -%> class ="active" <%- end -%>><%= link_to "Home", catalog_path('/') %></li>
+
+
+
         </ul>
       </div>
     </div>
