fix some tags that are out of place

--- a/app/views/shared/_search_form.html.erb
+++ b/app/views/shared/_search_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag catalog_index_path, :class => "form-inline", :method => :get do %>
+<%= form_tag catalog_index_path, :class => "form-horizontal", :method => :get do %>
     <i class="icon-search"></i>  <%= text_field_tag :q, params[:q], :class => "q input-medium",:placeholder=>"Search for" %>
     <% unless search_fields.empty? %>
         <%= select_tag(:search_field, options_for_select(search_fields, h(params[:search_field])), :title => "Targeted search options", :class => "span2") %>
