--- a/app/views/catalog/_facet_nav.html.erb
+++ b/app/views/catalog/_facet_nav.html.erb
@@ -3,5 +3,6 @@
 <% end %>
 <!-- LEFT COLUMN FOR FACETS -->
          <div class="span3">
+         <br><p><h6>Browse by:</h6></p>
            <%= sidebar_items.join('').html_safe %>
 		</div>
