--- a/app/views/catalog/_home_text.html.erb
+++ b/app/views/catalog/_home_text.html.erb
@@ -8,9 +8,9 @@
 
     <%= render :partial => 'facet_nav' %>
     <!-- nested Fluid RIGHT -->
-    <div class="row">
+    <div class="row-fluid">
       <!-- MAIN CONTENT AREA -->
-      <div class="span7">
+      <div class="span9 offset3">
         <%= render :partial => 'dca_text/welcome' %>
       </div>
       <div class="span9">
