Changes to EAD landing and overview pages after review with Melanie.

--- a/app/views/catalog/eadoverview.html.erb
+++ b/app/views/catalog/eadoverview.html.erb
@@ -16,13 +16,12 @@
 </div>
 
 <hr>
-<br>
 
 <div class="row">
   <div class="span3">
     <h6> On this page:</h6>
     <ul class="nav nav-tabs nav-stacked">
-      <li class="active"><a href="#overview">Overview</a></li>
+      <li><a href="#overview">Overview</a></li>
 <%  if !contents.empty? %>
       <li><a href="#contents">Contents</a></li>
 <%  end %>
