--- a/app/views/tufts_eads/_show.html.erb
+++ b/app/views/tufts_eads/_show.html.erb
@@ -11,20 +11,22 @@
         <h4> This collection has:</h4>
 
         <div class="collection_desc graytext">
-          <%= raw Tufts::EADMethods.physdesc(@document_fedora) %>
+          <%= raw Tufts::EADMethods.physdesc_split(@document_fedora) %>
         </div>
 
-        <p>Here is a description of this collection...</p>
         <p><%= raw Tufts::EADMethods.abstract(@document_fedora) %></p>
       </div>
 
       <div class="span5 offset1">
         <div class="tooltip-demo well">
           <a href="#"><h5>View Online Materials<i class="icon-arrow-right margintoparrow"></i></h5></a>
-          <p>Some of the materials from this collection are available online. Not all materials have necessarily been digitized. See the <a href="<%= raw Tufts::EADMethods.finding_aid_url(@document_fedora) %>">finding aid</a> or <a href="#">contact DCA</a> for more information.</p>
+          <p>Some of the materials from this collection are available online. Not all materials have necessarily been digitized. <a href="<%= raw Tufts::EADMethods.finding_aid_url(@document_fedora) %>">View the finding aid</a> or <a href="#">contact DCA</a> for more information.</p>
           <br>
           <a href="<%= raw Tufts::EADMethods.finding_aid_url(@document_fedora) %>"><h5>View Finding Aid<i class="icon-arrow-right margintoparrow"></i></h5></a>
           <p>A finding aid is a description of a collection of archival material, which will help you discover what records are available for research. It provides information about a collection, the collection's creators, and an outline of the collection's contents.  <a href="#">Learn more about finding aids</a>.</p>
         </div>
+
+        <br>
+        <br>
       </div>
     </div>
