changes to bookreader/imageviewer to show a header with a back to overview link

--- a/app/views/imageviewer/show_book.html.erb
+++ b/app/views/imageviewer/show_book.html.erb
@@ -1,6 +1,5 @@
-   <%= render_back_to_overview_link %>
     <div id="ImageInfo" data-pid="<%= params[:id] %>"></div>
-    <div id="BookReader" style="left:10px; right:10px; top:10px; bottom:2em;">
+    <div id="BookReader">
         Internet Archive BookReader Demo  2  <br/>
 
         <noscript>
@@ -9,5 +8,11 @@
         </p>
         </noscript>
         <script type="text/javascript" src="/javascripts/pdfviewer/BookReaderPDFViewer.js"></script>
-
     </div>
+    <script type="text/javascript">
+        <!--
+            $(document).ready(function() {
+                $('a.logo').closest('span').append('<div class="overview_link"><%= render_back_to_overview_link %><div>');
+            });
+         // -->
+    </script>
