made the end of the welcome paragraph a link so it looks like the mockup, needs to be filled in

--- a/app/views/dca_text/_welcome.html.erb
+++ b/app/views/dca_text/_welcome.html.erb
@@ -1,6 +1,6 @@
 <div class="span7">
 <br/>
 <h2>Welcome to the digital library!</h2>
-  <p> The Tufts Digital Library is a place to explore and discover Tufts' research and teaching online. Collections include faculty and student scholarship, photograph and image collections, oral histories, student and university publications, and more. Explore using the links below or browse our collections.
+  <p> The Tufts Digital Library is a place to explore and discover Tufts' research and teaching online. Collections include faculty and student scholarship, photograph and image collections, oral histories, student and university publications, and more. Explore using the links below or <a href="#">browse our collections.</a>
      </p>
 </div>
