code for limit by / browse by

--- a/app/views/catalog/_facet_nav.html.erb
+++ b/app/views/catalog/_facet_nav.html.erb
@@ -3,6 +3,11 @@
 <% end %>
 <!-- LEFT COLUMN FOR FACETS -->
          <div class="span3">
-         <br><p><h6>Browse by:</h6></p>
+           <br>          
+           <%- if "index" == @current_action && false == has_search_parameters? -%>
+             <p><h6>Browse by:</h6></p>
+           <%- else -%>
+             <p><h6>Limit by:</h6></p>
+           <%- end -%>
            <%= sidebar_items.join('').html_safe %>
 		</div>
