Small EAD internal page change.

--- a/app/views/catalog/eadinternal.html.erb
+++ b/app/views/catalog/eadinternal.html.erb
@@ -8,7 +8,7 @@
 
 <div class="row">
   <div class="span9 offset3">
-    <h2>Series&nbsp;<%= series_level %>.&nbsp;&nbsp;<%= series_title %></h2>
+    <h2>Series&nbsp;<%= series_level %>:&nbsp;<%= series_title %></h2>
   </div>
 </div>
 
