Remove the indented and gray style for the text at the top of the landing, overview, and internal pages.

--- a/app/views/tufts_eads/_show.html.erb
+++ b/app/views/tufts_eads/_show.html.erb
@@ -9,11 +9,7 @@
     <div class="row">
       <div class="span6">
         <h4>This collection has:</h4>
-
-        <div class="collection_desc graytext">
-          <%= raw Tufts::EADMethods.physdesc_split(@document_fedora) %>
-        </div>
-
+        <p><%= raw Tufts::EADMethods.physdesc_split(@document_fedora) %></p>
         <p><%= raw Tufts::EADMethods.abstract(@document_fedora) %></p>
       </div>
 
