--- a/app/views/catalog/eadoverview.html.erb
+++ b/app/views/catalog/eadoverview.html.erb
@@ -183,7 +183,7 @@
   <div class="span3">
     <div class="tooltip-demo well">
       <a href="#"><h5>View Online Materials<i class="icon-arrow-right margintoparrow"></i></h5></a>
-      <a href="#">Contact DCA</a> to view materials that are not online.
+      <p><a href="#">Contact DCA</a> to view materials that are not online.<p>
     </div>
   </div>
 </div>
