Make page title show up in title bar for EAD overview and internal pages.

--- a/app/views/catalog/eadinternal.html.erb
+++ b/app/views/catalog/eadinternal.html.erb
@@ -3,6 +3,8 @@
     series_title, series_physdesc, series_scopecontents = Tufts::EADMethods.get_series_info(series)
     series_items = Tufts::EADMethods.get_series_items(series)
     series_access_and_use = Tufts::EADMethods.get_series_access_and_use(series)
+
+    @page_title = "Series " + series_level + ": " + series_title + " - " + application_name
 %>
 
 
